# tk-pool

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  README.rst  vagga.yaml
examples/: http.rs  redis.rs
src/: basic.rs  config.rs  connect.rs  error_log.rs  lib.rs  metrics.rs  pool.rs  queue.rs  uniform.rs
src/uniform/: aligner.rs  chan.rs  connect.rs  failures.rs  mod.rs  pool.rs  sink.rs
