[package]
name = "tk-pool"
description = """
    Generic connection pool for tokio
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["tokio", "connection-pool", "TCP", "connection", "pool"]
homepage = "http://github.com/tailhook/tk-pool"
documentation = "http://docs.rs/tk-pool"
version = "0.1.0"
authors = ["paul@colomiets.name"]

[dependencies]
futures = "0.1.6"
abstract-ns = "0.2.3"
tokio-core = "0.1.1"
quick-error = "1.1.0"
log = "0.3.6"
rand = "0.3.15"

[dev-dependencies]
argparse = "0.2.1"
env_logger = "0.3.5"
ns-std-threaded = "0.1.0"
futures-cpupool = "0.1.2"
minihttp = { git="https://github.com/popravich/minihttp", rev="d01a391" }


[lib]
name = "tk_pool"
