[package]
name = "tk-pool"
description = """
    Generic connection pool for tokio
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["tokio", "connection-pool", "TCP", "connection", "pool"]
homepage = "http://github.com/tailhook/tk-pool"
documentation = "http://docs.rs/tk-pool"
version = "0.4.0"
authors = ["paul@colomiets.name"]

[dependencies]
futures = "0.1.10"
abstract-ns = "0.4.0"
tokio-core = "0.1.1"
log = "0.3.6"
rand = "0.3.15"
void = "1.0.2"

[dev-dependencies]
argparse = "0.2.1"
env_logger = "0.3.5"
ns-std-threaded = "0.3.0"
ns-router = "0.1.0"
futures-cpupool = "0.1.2"
tk-http = "0.3.0"


[lib]
name = "tk_pool"
